[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/HUD/Bars/HpBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/HUD/graphics/sword_ui.png" type="Texture" id=2]
[ext_resource path="res://UI/HUD/HUD.gd" type="Script" id=3]
[ext_resource path="res://UI/HUD/UiPanels/LosePanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/HUD/UiPanels/WinPanel.tscn" type="PackedScene" id=5]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -19.9999
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1880.0
margin_bottom = 80.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1880.0
margin_bottom = 80.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0

[node name="WeaponThumbnail" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
margin_right = 80.0
margin_bottom = 80.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 564.0
margin_bottom = 80.0

[node name="Bars" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 20.0
margin_right = 480.0
margin_bottom = 60.0

[node name="HpBar" parent="MarginContainer/VBoxContainer/HBoxContainer/CenterContainer/Bars" instance=ExtResource( 1 )]
margin_right = 480.0

[node name="WinPanel" parent="MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 1880.0
margin_bottom = 84.0

[node name="LosePanel" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 1880.0
margin_bottom = 84.0
